# pxtx

./: .gitignore  README.md  justfile  pxtx.toml.example  pyproject.toml
.github/workflows/: cli-release.yml  cli-tests.yml  style.yml  tests.yml
cli/: README.md  pyproject.toml
cli/skill/: SKILL.md
cli/src/pxtx/: __main__.py  cli.py  client.py  config.py  display.py
cli/tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_display.py
deploy/: pxtx-deploy.sh
doc/: testing.md
src/: manage.py
src/pxtx/: settings.py  test_settings.py  urls.py  wsgi.py
src/pxtx/core/: admin.py  apps.py  forms.py  text.py  urls.py  widgets.py
src/pxtx/core/api/: auth.py  filters.py  pagination.py  serializers.py  urls.py  views.py
src/pxtx/core/migrations/: 0001_initial.py  0002_core_models.py  0003_activitylog.py  0004_apitoken.py  0005_alter_issue_priority.py
src/pxtx/core/models/: __init__.py  activity_log.py  api_token.py  base.py  comment.py  github_ref.py  issue.py  issue_reference.py  milestone.py  user.py
src/pxtx/core/templatetags/: rich_text.py
src/pxtx/core/views/: __init__.py  _helpers.py  activity.py  deploy.py  issue.py  milestone.py
src/tests/: conftest.py  test_admin.py  test_text.py  test_widgets.py
src/tests/api/: test_activity.py  test_activity_and_render.py  test_auth.py  test_comments.py  test_github_refs.py  test_issues.py  test_milestones.py  test_references.py
src/tests/factories/: __init__.py  core.py
src/tests/management/: test_runperiodic.py
src/tests/models/: test_activity_log.py  test_api_token.py  test_comment.py  test_github_ref.py  test_issue.py  test_issue_reference.py  test_milestone.py  test_user.py
src/tests/views/integration/: test_activity.py  test_deploy.py  test_issue.py  test_issue_forms.py  test_issue_htmx.py  test_issue_list_filters.py  test_issue_sidebar.py  test_milestone.py  test_root.py
(+38 files in other folders)
