[project]
name = "pxtx"
dynamic = ["version"]
description = "Command-line client for pxtx (pretalx issue tracker)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = [
  "requests~=2.32",
]

[project.scripts]
pxtx = "pxtx.cli:main"

[project.optional-dependencies]
dev = [
  "coverage",
  "freezegun",
  "pytest",
  "pytest-cov",
  "pytest-sugar",
  "responses",
  "ruff",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pxtx.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pxtx*"]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
addopts = "-p no:doctest -p no:pastebin -p no:nose"

[tool.coverage.run]
branch = true
source = ["src/pxtx"]
omit = [
  "*/__init__.py",
  "*/__main__.py",
]
relative_files = true

[tool.coverage.report]
fail_under = 100
exclude_also = [
  "def __repr__",
  "def __str__",
  "NotImplementedError",
]

[tool.ruff]
extend-exclude = ["scripts"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "ARG",
  "BLE001",
  "C901",
  "COM812",
  "D",
  "E501",
  "EM",
  "FBT",
  "FIX",
  "PLC0415",
  "PLR",
  "RET502",
  "RET503",
  "RUF001",
  "RUF012",
  "RUF100",
  "SLF001",
  "T201",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "DTZ",
  "RUF",
  "S",
  "S101",
  "SLF001",
  "TRY",
  "PLR2004",
]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
